# DysonCode

./: $null  .env  .env.example  .gitignore  .railwayignore  AGENTS.md  Dyson.py  HANDOFF.md  KORE_STATE.md  Makefile  README.md  _check.js  _check_asar.py  _check_build.py  _check_built_css.js  _check_css.js  _extract_asar.py  _extract_backup.py  _show_lines.py  _verify_release.js  api.py  auth.py  browser-panel.html  build_test.bat  check_syntax.py  devsphere-workspace.html  dyson-browser-integration.md  dysoncode-canvas-redesign.html  dysoncode-chat-panel.html  electron_debug.txt  find_swarm.bat  fix-toolbridge.ps1  fix_cloud_never.py  fix_css.js  fix_role_engine.py  kore_implementation_plan.md  launch_check.ps1  package-lock.json  package.json  patch_kore_alias.py  (+21 more)
.clinerules/: cross-agent-protocol.md
.kore-memory/: HANDOFF_PROTOCOL.md  blockers.jsonl  current-work.json  decisions.jsonl  handoff.py  handoffs.jsonl
BuildDocs/: DysonAutoCode.md  DysonCoder-v2-SystemArchitecture.md  IdevaCoding1.md  IdevaPersonas.md  KatalystUndMetaBlocksMemoryKeep.md  jcode-kore-master-brief.md  kore-exec-spec.md
JcodeChatPlans/: jcode_token_optimization_modes.md  jcode_v2.md  zoocode_jcode_upgrade.md
app/: package.json
asar-backup/: package.json
cherry-pick/: BUILD_INFO.txt  README.md
kore-api/: $null  .env.example  .gitignore  .infisical.json  Makefile  (+15 more)
kore-exec/: Cargo.toml
kore-exec/src/: error.rs  lib.rs  main.rs  protocol.rs
kore-exec/src/tools/: diff.rs  grep.rs  jcode_precheck.rs  mod.rs  read_file.rs  shell.rs  write_file.rs
kore-exec/tests/: integration.rs
(+733 files in other folders)
