[package]
name = "kore-exec"
version = "0.1.0"
edition = "2021"
description = "KORE execution backend — panic-free file/shell tools for subprocess JSON bridge"

[[bin]]
name = "kore-exec"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
regex = "1"
similar = "2"
walkdir = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"

[dev-dependencies]
tempfile = "3"
